[package]
name = "puntoxero-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
solana-client = "2.1.4"
solana-sdk = "2.1.4"
spl-associated-token-account = {version = "6.0.0", features = ["no-entrypoint"] }
spl-token = {version = "7.0.0", features = ["no-entrypoint"] }
sqlx = { version = "0.8.2", features = ["macros", "uuid", "chrono"] }
thiserror = "2.0.3"
tokio = "1.28.2"
uuid = "1.11.0"
